2.9.0 Andreas Abel <andreas.abel@gu.se>
	* LBNF: removed `delimiters` pragma [#308]
	* Haskell: removed options --alex1, --alex2, --sharestrings, --profile, and --cnf [#265]
	* C#: backend removed [#265]
	* C/C++: fixed buffer overrun in String literal lexer [#316]
	* C: strdup is not part of C89 standard, _POSIX_C_SOURCE required [#318]
	* C++: fixed regressions (one of them #310) introduced by #288
	* LBNF: allow list categories in entrypoints pragma [#306]
	* LBNF: report clashes between token and ordinary categories [#323]
	* C/C++/OCaml: allow unicode characters in token definitions [#324]
	* C/OCaml: sanitize grammar file names [#325]
	* Java/ANTLR: removed superfluous quotation in lexer character sets [#319]

2.8.4 Andreas Abel <andreas.abel@gu.se>  October 2020
	* GHC versions 7.10 - 8.10 supported, dropped GHC 7.6 and 7.8
	* LBNF: whitespace list separators are now accepted; treated like "" [#70]
	* `define` pragma now implemented by all maintained backends [#266, #285]
	* BNFC performs more sanity checks on the grammar, reports errors with source locations [#186, #213, #214]
	* option `--check` to only perform sanity checks [#286]
	* Backends now more resilient against keyword and name clashes (e.g. via qualified imports) [#278, #289]
	* Haskell: new option --text-token to use Data.Text instead of String in the lexer [#167]
	* Haskell: allow block comment delimiters of any length [#169, #202]
	* Haskell: define Err monad as Either String [#273], migration guide at https://bnfc.readthedocs.io/en/v2.8.4/user_guide.html#haskell-backend
	* Haskell: IsString instances for Ident-like token types [#192]
	* C/C++/Java: support multiple block comment forms per grammar [#202]
	* C++(STL): parser now throws exception on parse error [#288]
	* C++: fixed quadratic behavior in C++-generated printer (regression in 2.8.2)
	* Java: escape JFlex special characters [#299]
	* Java/ANTLR: emit start rules to work around ANTLR issue #2689 [#272]