@@ -3,8 +3,8 @@ Version: 2.9.0
 cabal-version: >= 1.10
 build-type: Simple
 category: Development
-Copyright: (c) Andreas Abel, Jonas Almström Duregård, Krasimir Angelov, Jean-Philippe Bernardy, Björn Bringert, Johan Broberg, Kyle Butt, Paul Callaghan, Grégoire Détrez, Markus Forsberg, Ola Frid, Peter Gammie, Thomas Hallgren, Pascal Hof, Simon Huber, Patrik Jansson, Kristofer Johannisson, Antti-Juhani Kaijanaho, Andreas Lööw, Justin Meiners, Kent Mein, Ulf Norell, Gabriele Paganelli, Michael Pellauer, Fabian Ruch, and Aarne Ranta 2002 - 2020. Free software under GNU General Public License (GPL).
-License: GPL-2
+Copyright: (c) Andreas Abel, Jonas Almström Duregård, Krasimir Angelov, Jean-Philippe Bernardy, Björn Bringert, Johan Broberg, Kyle Butt, Paul Callaghan, Grégoire Détrez, Markus Forsberg, Ola Frid, Peter Gammie, Thomas Hallgren, Pascal Hof, Simon Huber, Patrik Jansson, Kristofer Johannisson, Antti-Juhani Kaijanaho, Andreas Lööw, Justin Meiners, Kent Mein, Ulf Norell, Gabriele Paganelli, Michael Pellauer, Fabian Ruch, and Aarne Ranta 2002 - 2020. Free software under the BSD 3-clause license.
+License: BSD3
 License-File: LICENSE
 Maintainer: bnfc-dev@googlegroups.com
 Homepage: http://bnfc.digitalgrammars.com/
@@ -73,6 +73,7 @@ Executable bnfc
     pretty >=1.1 && <1.2,
     filepath,
     deepseq,
+    string-qq,
     time
   if impl(ghc < 8.0)
     Build-Depends: semigroups
@@ -90,12 +91,14 @@ Executable bnfc
     ScopedTypeVariables
     TupleSections
   Other-modules:
-    -- generated by cabal
+    -- Generated by cabal
     Paths_BNFC
+    -- Generated from LICENSE
+    License
     -- Generated by bnfc
+    AbsBNF
     LexBNF
     ParBNF
-    AbsBNF
     PrintBNF
     -- BNFC core
     BNFC.Utils
@@ -216,6 +219,7 @@ Test-suite unit-tests
     temporary,
     containers,
     deepseq,
+    string-qq,
     time
   if impl(ghc < 8.0)
     Build-Depends: semigroups
@@ -254,12 +258,14 @@ Test-suite unit-tests
     -- Repetition of modules from main:
     -----------------------------------
 
-    -- generated by cabal
+    -- Generated by cabal
     Paths_BNFC
+    -- Generated from LICENSE
+    License
     -- Generated by bnfc
+    AbsBNF
     LexBNF
     ParBNF
-    AbsBNF
     PrintBNF
 
     -- BNFC core
