@@ -1,12 +1,19 @@
 # Author: Andreas Abel, 2018-01-01
 
+.PHONY: all default
+
+default: lbnf
+all: lbnf license
+
 # bnfc's own parser
 ###################
 
 # BNFC-generated files
 gen = AbsBNF.hs DocBNF.txt ErrM.hs LexBNF.x ParBNF.y PrintBNF.hs SkelBNF.hs TestBNF.hs
 
-all : AbsBNF.hs LexBNF.hs ParBNF.hs
+.PHONY: lbnf
+
+lbnf : AbsBNF.hs LexBNF.hs ParBNF.hs
 
 Abs%.hs Doc%.txt Lex%.x Par%.y Print%.hs Skel%.hs Test%.hs : %.cf
 	bnfc --haskell $<
@@ -16,6 +23,24 @@ Abs%.hs Doc%.txt Lex%.x Par%.y Print%.hs Skel%.hs Test%.hs : %.cf
 
 %.hs : %.y
 	happy -i $<
+
+# Generate License.hs
+#####################
+
+.PHONY: license
+
+license: License.hs
+
+License.hs : ../LICENSE Makefile
+	echo "\
+-- This file was autogenerated from LICENSE, do not edit!!\n\n\
+{-# LANGUAGE QuasiQuotes #-}\n\n\
+module License where\n\n\
+import Data.String.QQ\n\n\
+license :: String\n\
+license = [s|" > $@
+	cat $< >> $@
+	echo "\n|]" >> $@
 
 # Emacs Tags
 ############
@@ -27,6 +52,8 @@ tags :
 
 # Fake cabal file for old version of haskell-mode (emacs)
 #########################################################
+
+.PHONY: fake-cabal rm-fake-cabal
 
 fake-cabal :
 	touch inferior-haskell-find-project-root.cabal
