@@ -1,4 +1,5 @@
 2.9.0 Andreas Abel <andreas.abel@gu.se>
+	* New license: BSD 3-clause [#308]
 	* LBNF: removed `delimiters` pragma [#308]
 	* Haskell: removed options --alex1, --alex2, --sharestrings, --profile, and --cnf [#265]
 	* C#: backend removed [#265]
